--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "@prisma/client": "^6.9.0",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "express-async-errors": "^3.1.1"
   }
 }
